--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -29,7 +29,11 @@ body {
 }
 
 .card_item {
-
+	background-color: rgba(255, 255, 255, 0.8);
+padding-left: 20px;
+	padding: 10px;
+	margin-bottom: 10px;
+	margin-left: 20px;
 	width: 30%;
 	text-align: left;
 }
@@ -40,12 +44,12 @@ body {
 	cursor: pointer;
 }
 
-.container .card_inner {}
 
-.container .card_item img {
+
+ img {
 	width: 70px;
 	height: 70px;
-	margin-bottom: 10px;
+	margin-left: 20px;
 	border-radius: 50%;
 	align-items: center;
 	transition: transform .2s;
